# text2cpp

./: CMakeLists.txt  README.md  configure.ac
examples/: GoSource.go  c_example.c  c_example.h  cpp17_source.hpp  cppSource.cpp  cppSource.h  test1b.hpp  test1c.hpp
src/: Makefile.am  bin2cpp  bin2cpp.cpp
